# llm-neo4j-knowledge-graph-demo

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/: agent.py  main.py  settings.py  utils.py  vector_loader.py  vector_retriever.py
templates/: agent_prompt.jinja  agent_system_prompt.jinja  chunk_retrieval_prompt.jinja  chunk_retrieval_query.cypher
