[project]
name = "llm-neo4j-kg-demo"
version = "0.1.0"
description = "A demo showcasing the creation of a knowledge graph to use as a GraphRAG setup."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepeval==3.1.5",
    "jinja2==3.1.6",
    "langchain==0.3.9",
    "langchain-community==0.3.9",
    "langchain-experimental==0.3.3",
    "langchain-neo4j==0.1.1",
    "langchain-openai==0.2.10",
    "neo4j==5.27.0",
    "pypdf==4.3.1",
    "python-dotenv==1.0.1",
]
